--- a/src/partials/searchCountriesInput.html
+++ b/src/partials/searchCountriesInput.html
@@ -8,6 +8,11 @@
         class="search_form-input"
         placeholder="Еnter country name:"
         autocomplete="off"
+        required
+        <!--
+        pattern="[a-ik-tvxyz]+"
+        --
+      />
       />
     </label>
   </form>
